Sticky header. Code refactoring

--- a/app/page-home.html
+++ b/app/page-home.html
@@ -271,7 +271,7 @@
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">ABK</a>
-									<div class="country">
+									<div class="product-country">
 										<img src="images/flags/011-italy.svg" alt="Италия">
 										<span>Италия</span>
 									</div>
@@ -288,7 +288,7 @@
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">Atlas Concorde</a>
-									<div class="country">
+									<div class="product-country">
 										<img src="images/flags/228-russia.svg" alt="Россия">
 										<span>Россия</span>
 									</div>
@@ -305,7 +305,7 @@
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">ADEX</a>
-									<div class="country">
+									<div class="product-country">
 										<img src="images/flags/033-japan.svg" alt="Япония">
 										<span>Япония</span>
 									</div>
@@ -322,7 +322,7 @@
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">ALELUIA CERAMICAS</a>
-									<div class="country">
+									<div class="product-country">
 										<img src="images/flags/077-france.svg" alt="Франция">
 										<span>Франция</span>
 									</div>
@@ -339,7 +339,7 @@
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">BIEN SERAMIK</a>
-									<div class="country">
+									<div class="product-country">
 										<img src="images/flags/066-germany.svg" alt="Германия">
 										<span>Германия</span>
 									</div>
@@ -356,7 +356,7 @@
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">Bellavista</a>
-									<div class="country">
+									<div class="product-country">
 										<img src="images/flags/261-china.svg" alt="Китай">
 										<span>Китай</span>
 									</div>
@@ -373,7 +373,7 @@
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">Atlas Concorde</a>
-									<div class="country">
+									<div class="product-country">
 										<img src="images/flags/228-russia.svg" alt="Россия">
 										<span>Россия</span>
 									</div>
@@ -390,7 +390,7 @@
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">Atlas Concorde</a>
-									<div class="country">
+									<div class="product-country">
 										<img src="images/flags/228-russia.svg" alt="Россия">
 										<span>Россия</span>
 									</div>
