--- a/app/parts/product-cards/product-1.html
+++ b/app/parts/product-cards/product-1.html
@@ -7,12 +7,12 @@
 	</div>
 	<div class="card-meta">
 		<a href="#" class="permalink">Керамогранит Italon Класс Блэк 45x45</a>
-		<div class="country">
+		<div class="product-country">
 			<span>Italon,</span>
 			<img src="images/flags/228-russia.svg" alt="Россия">
 			<span>Россия</span>
 		</div>
-		<div class="price">
+		<div class="product-price">
 			<ins>6300 <sup>₽/шт</sup></ins>
 		</div>
 	</div>
