--- a/app/parts/product-cards/product-2.html
+++ b/app/parts/product-cards/product-2.html
@@ -7,12 +7,12 @@
 	</div>
 	<div class="card-meta">
 		<a href="#" class="permalink">Керамогранит Italon Класс Блэк 45х45</a>
-		<div class="country">
+		<div class="product-country">
 			<span>Ibica,</span>
 			<img src="images/flags/066-germany.svg" alt="Германия">
 			<span>Германия</span>
 		</div>
-		<div class="price">
+		<div class="product-price">
 			<del>3300</del>
 			<ins>4300 <sup>₽/шт</sup></ins>
 		</div>
