Added modals. Added switch mask input function. Other CSS fixes.  Code refactoring

--- a/app/page-home.html
+++ b/app/page-home.html
@@ -31,12 +31,12 @@
 						</div>
 					</div>
 					<!-- Slider navigation -->
-					<div class="h-heroes-slider-nav swiper-nav">
+					<div class="h-heroes-slider-nav swiper-nav swiper-nav--secondary">
 						<button class="swiper-button-prev btn">
-							<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+							<svg class="icon icon-arrow-long"><use xlink:href="/images/symbol-defs.svg#arrow-long"></use></svg>
 						</button>
 						<button class="swiper-button-next btn">
-							<svg class="icon icon-slider-arrow"><use xlink:href="/images/symbol-defs.svg#slider-arrow"></use></svg>
+							<svg class="icon icon-arrow-long"><use xlink:href="/images/symbol-defs.svg#arrow-long"></use></svg>
 						</button>
 					</div>
 				</div>
