--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -129,6 +129,12 @@
 
 	<!-- @@include('mobile-menu.html') -->
 
+	@@include('modals/callback-modal.html')
+
+	@@include('modals/project-modal.html')
+
+	@@include('modals/success-modal.html')
+
 	<script src="./js/jquery.js"></script>
 	<script src="./js/bootstrap.bundle.js"></script>
 	<script src="./js/vendors.js"></script>
