--- a/app/parts/product-cards/product-1.html
+++ b/app/parts/product-cards/product-1.html
@@ -18,7 +18,7 @@
 	</div>
 	<div class="card-buttons">
 		<form class="card-buttons-purchase">
-			<button type="submit" class="btn btn-secondary btn-purchase">
+			<button type="submit" class="btn btn-primary btn-purchase">
 				<div class="before-added">В корзину</div>
 				<div class="after-added">
 					<svg class="icon icon-checked"><use xlink:href="/images/symbol-defs.svg#checked"></use></svg>
