--- a/app/parts/product-cards/product-2.html
+++ b/app/parts/product-cards/product-2.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="card-buttons">
 		<form class="card-buttons-purchase">
-			<button type="submit" class="btn btn-secondary btn-purchase _added">
+			<button type="submit" class="btn btn-primary btn-purchase _added">
 				<div class="before-added">В корзину</div>
 				<div class="after-added">
 					<svg class="icon icon-checked"><use xlink:href="/images/symbol-defs.svg#checked"></use></svg>
