--- a/app/parts/seo-article.html
+++ b/app/parts/seo-article.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-	<div class="col-8">
+	<div class="col-md-10 col-xl-8">
 		<article>
 			<h2><span class="text-orange">aplitka.ru</span> — это философия керамики</h2>
 			<p>Каждый из нас понимает очевидную вещь: постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки экспериментов, поражающих по своей масштабности и грандиозности. Элементы политического процесса, превозмогая сложившуюся непростую экономическую ситуацию, превращены в посмешище, хотя само их существование приносит несомненную пользу обществу.</p>
