--- a/app/parts/article-cards/article-4.html
+++ b/app/parts/article-cards/article-4.html
@@ -1,5 +1,5 @@
 <div class="card card-article">
-	<div class="card-photo zoom-photo">
+	<div class="card-photo zoom-photo img-cover">
 		<a href="#">
 			<img src="images/articles/4.jpg" alt="">
 		</a>
