--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -81,9 +81,15 @@
 								<span></span>
 							</button>
 						</div>
-					</div><!-- /.header-middle-burger -->
+					</div><!-- /.burger -->
 
-					<div class="col-auto align-self-center logotype">
+					<div class="col-auto align-self-center phone">
+						<a href="#callbackModal" data-toggle="modal" class="phone-btn" role="button">
+							<svg class="icon icon-phone"><use xlink:href="./images/symbol-defs.svg#phone"></use></svg>
+						</a>
+					</div><!-- /.phone -->
+
+					<div class="col col-lg-auto align-self-center logotype">
 						<a href="index.html" rel="home">
 							<img src="./images/logotype.png" alt="Интернет-магазин Aplitka">
 						</a>
@@ -117,7 +123,11 @@
 						</div><!-- /.dropdown -->
 					</div><!-- /.stores -->
 
-					<div class="col align-self-center search">
+					<div class="col-auto col-lg align-self-center search">
+						<button type="button" class="search-btn btn">
+							<svg class="icon icon-search"><use xlink:href="./images/symbol-defs.svg#search"></use></svg>
+							<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#cross"></use></svg>
+						</button>
 						<form class="search-form form">
 							<div class="form-placeholder">
 								<label>
@@ -568,7 +578,8 @@
 								<li><a href="#">ABK</a></li>
 								<li><a href="#">ABSOLUT CERAMICA</a></li>
 								<li><a href="#">ADEX</a></li>
-							</ul></li>
+							</ul>
+						</li>
 						<li>
 							<a href="#" data-toggle="brand-popover">А-Я</a>
 							<ul>
