--- a/app/index.html
+++ b/app/index.html
@@ -51,13 +51,19 @@
 			</style>
 
 			<div class="pages-logo mb-40">
-				<img src="images/logotype.png" alt="Интернет-магазин Aplitka">
+				<img src="./images/logotype.png" alt="Интернет-магазин Aplitka">
 			</div>
 			<div class="row row-items-24">
 				<div class="col-sm-6">
 					<h3 class="mb-20 text-md w-bold">Общие страницы</h3>
 					<ol class="pages-list">
 						<li><a href="page-home.html">Главная страница</a></li>
+					</ol>
+				</div>
+				<div class="col-sm-6">
+					<h3 class="mb-20 text-md w-bold">Магазин</h3>
+					<ol class="pages-list">
+						<li><a href="page-catalog.html">Каталог</a></li>
 					</ol>
 				</div>
 			</div>
