--- a/app/page-home.html
+++ b/app/page-home.html
@@ -101,7 +101,7 @@
 								<span class="text-300">120 коллекций</span>
 							</div>
 						</a>
-						<img src="images/categories/1.jpg" alt="">
+						<img src="./images/categories/1.jpg" alt="">
 					</div>
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-5">
@@ -112,7 +112,7 @@
 								<span class="text-300">86 коллекций</span>
 							</div>
 						</a>
-						<img src="images/categories/2.jpg" alt="">
+						<img src="./images/categories/2.jpg" alt="">
 					</div>
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-4 col-xl-6">
@@ -123,7 +123,7 @@
 								<span class="text-300">150 коллекции</span>
 							</div>
 						</a>
-						<img src="images/categories/3.jpg" alt="">
+						<img src="./images/categories/3.jpg" alt="">
 					</div>
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-4 col-xl-6">
@@ -134,7 +134,7 @@
 								<span class="text-300">167 коллекции</span>
 							</div>
 						</a>
-						<img src="images/categories/4.jpg" alt="">
+						<img src="./images/categories/4.jpg" alt="">
 					</div>
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-4 col-xl-5">
@@ -145,7 +145,7 @@
 								<span class="text-300">120 коллекций</span>
 							</div>
 						</a>
-						<img src="images/categories/5.jpg" alt="">
+						<img src="./images/categories/5.jpg" alt="">
 					</div>
 				</div><!-- /.col -->
 				<div class="col-md-6 col-lg-7 col-xl-5">
@@ -156,7 +156,7 @@
 								<span class="text-300">1200 коллекций</span>
 							</div>
 						</a>
-						<img src="images/categories/6.jpg" alt="">
+						<img src="./images/categories/6.jpg" alt="">
 					</div>
 				</div><!-- /.col -->
 				<div class="col-lg-5 col-xl-2">
@@ -220,7 +220,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-xl-6">
-							<img src="images/h-about.jpg" alt="Нам доверяют">
+							<img src="./images/h-about.jpg" alt="Нам доверяют">
 						</div>
 					</div>
 				</div><!-- /.tab-pane -->
@@ -241,7 +241,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-xl-6">
-							<img src="images/h-about.jpg" alt="Нам доверяют">
+							<img src="./images/h-about.jpg" alt="Нам доверяют">
 						</div>
 					</div>
 				</div><!-- /.tab-pane -->
@@ -268,13 +268,13 @@
 							<div class="card card-collection">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
-										<img src="images/collections/1.jpg" alt="">
+										<img src="./images/collections/1.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">ABK</a>
 									<div class="product-country">
-										<img src="images/flags/011-italy.svg" alt="Италия">
+										<img src="./images/flags/011-italy.svg" alt="Италия">
 										<span>Италия</span>
 									</div>
 									<div class="collections">18 коллекций</div>
@@ -285,13 +285,13 @@
 							<div class="card card-collection">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
-										<img src="images/collections/2.jpg" alt="">
+										<img src="./images/collections/2.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">Atlas Concorde</a>
 									<div class="product-country">
-										<img src="images/flags/228-russia.svg" alt="Россия">
+										<img src="./images/flags/228-russia.svg" alt="Россия">
 										<span>Россия</span>
 									</div>
 									<div class="collections">28 коллекций</div>
@@ -302,13 +302,13 @@
 							<div class="card card-collection">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
-										<img src="images/collections/3.jpg" alt="">
+										<img src="./images/collections/3.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">ADEX</a>
 									<div class="product-country">
-										<img src="images/flags/033-japan.svg" alt="Япония">
+										<img src="./images/flags/033-japan.svg" alt="Япония">
 										<span>Япония</span>
 									</div>
 									<div class="collections">65 коллекций</div>
@@ -319,13 +319,13 @@
 							<div class="card card-collection">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
-										<img src="images/collections/4.jpg" alt="">
+										<img src="./images/collections/4.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">ALELUIA CERAMICAS</a>
 									<div class="product-country">
-										<img src="images/flags/077-france.svg" alt="Франция">
+										<img src="./images/flags/077-france.svg" alt="Франция">
 										<span>Франция</span>
 									</div>
 									<div class="collections">43 коллекций</div>
@@ -336,13 +336,13 @@
 							<div class="card card-collection">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
-										<img src="images/collections/5.jpg" alt="">
+										<img src="./images/collections/5.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">BIEN SERAMIK</a>
 									<div class="product-country">
-										<img src="images/flags/066-germany.svg" alt="Германия">
+										<img src="./images/flags/066-germany.svg" alt="Германия">
 										<span>Германия</span>
 									</div>
 									<div class="collections">32 коллекций</div>
@@ -353,13 +353,13 @@
 							<div class="card card-collection">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
-										<img src="images/collections/6.jpg" alt="">
+										<img src="./images/collections/6.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">Bellavista</a>
 									<div class="product-country">
-										<img src="images/flags/261-china.svg" alt="Китай">
+										<img src="./images/flags/261-china.svg" alt="Китай">
 										<span>Китай</span>
 									</div>
 									<div class="collections">41 коллекций</div>
@@ -370,13 +370,13 @@
 							<div class="card card-collection">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
-										<img src="images/collections/7.jpg" alt="">
+										<img src="./images/collections/7.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">Atlas Concorde</a>
 									<div class="product-country">
-										<img src="images/flags/228-russia.svg" alt="Россия">
+										<img src="./images/flags/228-russia.svg" alt="Россия">
 										<span>Россия</span>
 									</div>
 									<div class="collections">28 коллекций</div>
@@ -387,13 +387,13 @@
 							<div class="card card-collection">
 								<div class="card-photo zoom-photo img-cover">
 									<a href="#">
-										<img src="images/collections/8.jpg" alt="">
+										<img src="./images/collections/8.jpg" alt="">
 									</a>
 								</div>
 								<div class="card-meta">
 									<a href="#" class="permalink">Atlas Concorde</a>
 									<div class="product-country">
-										<img src="images/flags/228-russia.svg" alt="Россия">
+										<img src="./images/flags/228-russia.svg" alt="Россия">
 										<span>Россия</span>
 									</div>
 									<div class="collections">28 коллекций</div>
