--- a/app/parts/article-cards/article-4.html
+++ b/app/parts/article-cards/article-4.html
@@ -1,7 +1,7 @@
 <div class="card card-article">
 	<div class="card-photo zoom-photo img-cover">
 		<a href="#">
-			<img src="images/articles/4.jpg" alt="">
+			<img src="./images/articles/4.jpg" alt="">
 		</a>
 	</div>
 	<div class="card-meta">
