--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -126,7 +126,7 @@
 					<div class="col-auto col-lg align-self-center search">
 						<button type="button" class="search-btn btn">
 							<svg class="icon icon-search"><use xlink:href="./images/symbol-defs.svg#search"></use></svg>
-							<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#cross"></use></svg>
+							<svg class="icon icon-close"><use xlink:href="./images/symbol-defs.svg#close"></use></svg>
 						</button>
 						<form class="search-form form">
 							<div class="form-placeholder">
@@ -194,7 +194,7 @@
 												<span class="title">Керамогранит Bliss Beige FT4BSS11 41X41</span>
 												<div class="product-country">
 													<span>Italon,</span>
-													<img src="images/flags/228-russia.svg" alt="Россия">
+													<img src="./images/flags/228-russia.svg" alt="Россия">
 													<span>Россия</span>
 												</div>
 											</div>
@@ -208,7 +208,7 @@
 												<span class="title">Керамогранит Bliss Beige FT4BSS11 41X41</span>
 												<div class="product-country">
 													<span>Italon,</span>
-													<img src="images/flags/228-russia.svg" alt="Россия">
+													<img src="./images/flags/228-russia.svg" alt="Россия">
 													<span>Россия</span>
 												</div>
 											</div>
