--- a/app/parts/product-cards/product-2.html
+++ b/app/parts/product-cards/product-2.html
@@ -2,14 +2,14 @@
 	<div class="card-shadow"></div>
 	<div class="card-photo zoom-photo">
 		<a href="#">
-			<img src="images/products/1.jpg" alt="">
+			<img src="./images/products/1.jpg" alt="">
 		</a>
 	</div>
 	<div class="card-meta">
 		<a href="#" class="permalink">Керамогранит Italon Класс Блэк 45х45</a>
 		<div class="product-country">
 			<span>Ibica,</span>
-			<img src="images/flags/066-germany.svg" alt="Германия">
+			<img src="./images/flags/066-germany.svg" alt="Германия">
 			<span>Германия</span>
 		</div>
 		<div class="product-price">
