--- a/app/parts/product-cards/product-1.html
+++ b/app/parts/product-cards/product-1.html
@@ -2,14 +2,14 @@
 	<div class="card-shadow"></div>
 	<div class="card-photo zoom-photo">
 		<a href="#">
-			<img src="images/products/2.jpg" alt="">
+			<img src="./images/products/2.jpg" alt="">
 		</a>
 	</div>
 	<div class="card-meta">
 		<a href="#" class="permalink">Керамогранит Italon Класс Блэк 45x45</a>
 		<div class="product-country">
 			<span>Italon,</span>
-			<img src="images/flags/228-russia.svg" alt="Россия">
+			<img src="./images/flags/228-russia.svg" alt="Россия">
 			<span>Россия</span>
 		</div>
 		<div class="product-price">
