--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,8 @@
 					<h3 class="mb-20 text-md w-bold">Магазин</h3>
 					<ol class="pages-list">
 						<li><a href="page-catalog.html">Каталог</a></li>
+						<li><a href="page-catalog-collections.html">Категория: колекции</a></li>
+						<li><a href="page-catalog-products.html">Категория: товары</a></li>
 					</ol>
 				</div>
 			</div>
