--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -12,7 +12,7 @@
 							</div><!-- /.logo -->
 							<div class="stores">
 								<div class="stores-header" id="footer-stores-title">
-									<button class="btn btn-dropdown" type="button" data-toggle="collapse" data-target="#footer-stores" aria-expanded="true" aria-controls="footer-stores">
+									<button type="button" class="btn btn-dropdown" data-toggle="collapse" data-target="#footer-stores" aria-expanded="true" aria-controls="footer-stores">
 										<span>Салоны</span>
 										<svg class="icon icon-arrow-dropdown"><use xlink:href="images/symbol-defs.svg#arrow-dropdown"></use></svg>
 									</button>
