--- a/app/parts/modals/callback-modal.html
+++ b/app/parts/modals/callback-modal.html
@@ -17,7 +17,7 @@
 								<span>Телефон</span>
 							</label>
 						</div>
-						<div class="form-checkbox switch-input-mask">
+						<div class="form-checkbox form-checkbox-sm switch-input-mask">
 							<input type="checkbox" id="callback-form-phone-mask" checked>
 							<label for="callback-form-phone-mask" class="form-checkbox-label">Показать маску ввода телефона</label>
 						</div>
