--- a/app/page-catalog.html
+++ b/app/page-catalog.html
@@ -1,4 +1,4 @@
-@@include('parts/header.html', { title: 'Главная страница' })
+@@include('parts/header.html', { title: 'Каталог' })
 
 <main class="page-main">
 
@@ -6,9 +6,15 @@
 	<div class="page-heading">
 		<div class="container">
 			<div class="breadcrumbs">
-				<ul class="breadcrumbs-list">
-					<li><a href="page-home.html" rel="home">Главная</a></li>
-					<li><span>Каталог</span></li>
+				<ul class="breadcrumbs-list" itemscope itemtype="https://schema.org/BreadcrumbList">
+					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
+						<a itemprop="item" href="page-home.html" rel="home"><span itemprop="name">Главная</span></a>
+						<meta itemprop="position" content="0">
+					</li>
+					<li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement">
+						<span itemprop="item"><span itemprop="name">Каталог</span></span>
+						<meta itemprop="position" content="1">
+					</li>
 				</ul>
 			</div>
 			<h1 class="title text-xxl">Каталог</h1>
