--- a/app/parts/modals/project-modal.html
+++ b/app/parts/modals/project-modal.html
@@ -33,7 +33,7 @@
 								<span>Телефон</span>
 							</label>
 						</div>
-						<div class="form-checkbox switch-input-mask">
+						<div class="form-checkbox form-checkbox-sm switch-input-mask">
 							<input type="checkbox" id="project-form-phone-mask" checked>
 							<label for="project-form-phone-mask" class="form-checkbox-label">Показать маску ввода телефона</label>
 						</div>
